@@ -88,3 +88,6 @@
 	* Incremented the package version to 0.6.0.
 2016-12-03 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented button lamp feedback for the GPIO delay controls.
+2016-12-03 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/lwnetdelay/lwnetdelay.cpp that broke title
+	bar display.
